# mplapack

./: configure.ac  gen_configure.sh
benchmark/mpblas/: Makefile._Float128.am  Makefile._Float128_opencl.am  Rgemm.cpp  Rgemm_dd_cuda_kernel.cpp
benchmark/mplapack/: Rgetrf.cpp  Rpotrf.cpp
misc/: cudalt.py
mpblas/optimized/_Float128/: Makefile.am
mpblas/optimized/_Float128/opencl/: Makefile  Makefile.am  Makefile.in  OclHelper.hpp  Rgemm_opencl.cpp  cpp_kernel.h
mpblas/optimized/dd/cuda/: Makefile.am  Rgemm_fermi.cu  Rgemm_fermi_NN_0.cu  Rgemm_fermi_NN_p.cu  Rsyrk.cu
